--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "execute": "npm run build && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node ./bin/index.js",
+    "start": "node ./build/index.js",
     "dev": "tsc --watch"
   },
   "author": "",
